<resources>
    <string name="app_name">hw_02</string>

    <string name="homework_1">Homework 1</string>
    <string name="click_me">Click me</string>

    <string name="homework_2">Homework 2</string>
    <string name="play_guessing_game">Play Guessing Game</string>
    <string name="guessing_game_user">User Guess</string>
    <string name="guessing_game_computer">Computer Guess</string>

    <string name="guess_number">Guess the number\nbetween 1 and 100</string>
    <string name="enter_number">Enter your guess</string>
    <string name="guess">Guess</string>

    <string name="computer_guess_prompt">Is your number…</string>
    <string name="lower">Lower</string>
    <string name="higher">Higher</string>
    <string name="correct">Correct</string>
</resources>