<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homework_1"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:gravity="center" />

        <Button
            android:id="@+id/button_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_me"
            android:textSize="28sp"
            android:layout_marginBottom="8dp"
            android:padding="12dp"
            android:backgroundTint="@color/purple"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homework_2"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_guessing_game"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:gravity="center" />

        <Button
            android:id="@+id/button_user_guess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guessing_game_user"
            android:textSize="24sp"
            android:padding="16dp"
            android:backgroundTint="@color/teal"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_computer_guess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guessing_game_computer"
            android:textSize="24sp"
            android:padding="16dp"
            android:backgroundTint="@color/teal"
            android:textColor="@android:color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>